Update heading from 'Die' to 'Dice'

--- a/de1.html
+++ b/de1.html
@@ -127,7 +127,7 @@
 </head>
 <body>
 
-    <h1>Magic 10-Sided Die</h1>
+    <h1>Magic 10-Sided Dice</h1>
     <div id="info">Roll a <strong>5</strong> to draw a hard card!</div>
 
     <div id="de">🎲</div>
