Change button text from 'Roll the die' to 'Roll the dice'

--- a/de1.html
+++ b/de1.html
@@ -132,7 +132,7 @@
 
     <div id="de">🎲</div>
     <div id="resultat"></div>
-    <button id="lancer">Roll the die</button>
+    <button id="lancer">Roll the dice</button>
 
     <script>
         const faces = [1,2,3,4,5,6,7,8,9,10];
