--- a/de2.html
+++ b/de2.html
@@ -127,12 +127,12 @@
 </head>
 <body>
 
-    <h1>Magic 10-Sided Die</h1>
+    <h1>Magic 10-Sided Dice</h1>
     <div id="info">Roll a <strong>5</strong> Swap your dice with the player of your choice!</div>
 
     <div id="de">🎲</div>
     <div id="resultat"></div>
-    <button id="lancer">Roll the die</button>
+    <button id="lancer">Roll the dice</button>
 
     <script>
         const faces = [1,2,3,4,5,6,7,8,9,10];
