--- a/de1.html
+++ b/de1.html
@@ -9,8 +9,11 @@
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             text-align: center;
-            background: linear-gradient(135deg, #1e3c72, #2a5298);
+
+            /* 🎨 Nouveau fond */
+            background: linear-gradient(135deg, #4b0082, #6a5acd);
             color: #fff;
+
             padding: 20px;
             margin: 0;
         }
@@ -31,22 +34,30 @@
             width: 180px;
             height: 180px;
             margin: 0 auto;
-            background-size: contain;
-            background-repeat: no-repeat;
-            background-position: center;
 
+            /* 🎨 Nouvelle couleur du dé */
+            background: #f5f5f5;
+
+            color: #222;
+            font-size: 60px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             border-radius: 20px;
-            border: 5px solid #444;
+
+            /* 🎨 Nouvel outline */
+            border: 5px solid #333;
+
             cursor: pointer;
             transition: all 0.3s ease;
             box-shadow: 0 10px 20px rgba(0,0,0,0.5);
-
-            /* retire l’ancien texte */
-            font-size: 0;
         }
 
+        /* 🎨 Couleur spéciale quand on tire un 5 */
         #de.action {
-            border-color: #ff9900;
+            background: #ffd447;
+            color: #000;
+            border-color: #ff9a00;
             box-shadow: 0 10px 30px rgba(255,200,50,0.7);
         }
 
@@ -63,7 +74,7 @@
         }
 
         #resultat.echec {
-            color: #ccc;
+            color: #ddd;
         }
 
         button {
@@ -73,53 +84,48 @@
             border: none;
             border-radius: 10px;
             cursor: pointer;
-            background: #ff9900;
+
+            /* 🎨 Nouveau bouton */
+            background: #9146ff;
             color: #fff;
             transition: background 0.3s;
+
             width: 80%;
             max-width: 250px;
         }
 
         button:hover {
-            background: #ffcc33;
+            background: #b57eff;
         }
 
         @media (max-width: 600px) {
             #de {
                 width: 130px;
                 height: 130px;
+                font-size: 40px;
+                border-width: 4px;
             }
 
             button {
-                width: 90%;
+                font-size: 1.1em;
+                padding: 10px 15px;
             }
         }
+
     </style>
 </head>
 <body>
 
     <h1>Magic 10-Sided Dice</h1>
-    <div id="info">Roll a <strong>5</strong> to have a special action !</div>
+    <div id="info">Roll a <strong>5</strong> to draw a hard card!</div>
 
-    <div id="de"></div>
+    <div id="de">🎲</div>
     <div id="resultat"></div>
     <button id="lancer">Roll the dice</button>
 
     <script>
-        const faces = [
-            "images/face1.png",
-            "images/face2.png",
-            "images/face3.png",
-            "images/face4.png",
-            "images/face5.png",
-            "images/face6.png",
-            "images/face7.png",
-            "images/face8.png",
-            "images/face9.png",
-            "images/face10.png"
-        ];
-
-        const actionFace = 4; // 👉 index 4 = face5.png (compte 0)
+        const faces = [1,2,3,4,5,6,7,8,9,10];
+        const actionFace = 5;
         const de = document.getElementById('de');
         const resultatDiv = document.getElementById('resultat');
         const bouton = document.getElementById('lancer');
@@ -129,18 +135,17 @@
             const iterations = 20;
 
             const interval = setInterval(() => {
-                const randomImg = faces[Math.floor(Math.random() * faces.length)];
-                de.style.backgroundImage = `url(${randomImg})`;
+                const chiffreTemp = faces[Math.floor(Math.random() * faces.length)];
+                de.textContent = chiffreTemp;
                 compteur++;
 
                 if (compteur >= iterations) {
                     clearInterval(interval);
 
-                    const finalIndex = Math.floor(Math.random() * faces.length);
-                    const finalImg = faces[finalIndex];
-                    de.style.backgroundImage = `url(${finalImg})`;
+                    const final = faces[Math.floor(Math.random() * faces.length)];
+                    de.textContent = final;
 
-                    if (finalIndex === actionFace) {
+                    if (final === actionFace) {
                         resultatDiv.textContent = "Draw a hard card!";
                         de.classList.add("action");
                         resultatDiv.classList.add("action");
@@ -157,9 +162,6 @@
 
         de.addEventListener('click', lancerDeSimule);
         bouton.addEventListener('click', lancerDeSimule);
-
-        // Affichage initial
-        de.style.backgroundImage = `url(${faces[0]})`;
     </script>
 
 </body>
