--- a/de1.html
+++ b/de1.html
@@ -7,13 +7,10 @@
 
     <style>
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: 'Segoe UI', Tahoma, sans-serif;
             text-align: center;
-
-            /* Couleur du fond inspirée de l'image */
-            background: #1D1BAA;
-            color: #fff;
-
+            background: linear-gradient(135deg, #1e3c72, #2a5298);
+            color: white;
             padding: 20px;
             margin: 0;
         }
@@ -21,96 +18,84 @@
         h1 {
             font-size: 2.2em;
             margin-bottom: 10px;
-            text-shadow: 2px 2px 5px #000;
         }
 
         #info {
             font-size: 1.2em;
             margin-bottom: 20px;
-            opacity: 0.9;
         }
 
+        /* PERSONNAGE */
+        #perso {
+            font-size: 90px;
+            margin-bottom: 15px;
+            transition: transform 0.3s ease;
+        }
+
+        /* DÉ */
         #de {
             width: 180px;
             height: 180px;
             margin: 0 auto;
-
-            /* Couleur du corps du personnage */
-            background: #8E8C91;
-
-            color: #2E2B31;
+            background: #ffffff;
+            color: #000;
             font-size: 60px;
             display: flex;
-            align-items: center;
             justify-content: center;
+            align-items: center;
             border-radius: 20px;
-
-            /* Contour gris foncé (jambes du perso) */
-            border: 5px solid #2E2B31;
-
+            border: 5px solid #333;
             cursor: pointer;
-            transition: all 0.3s ease;
-            box-shadow: 0 10px 20px rgba(0,0,0,0.5);
+            transition: all 0.2s ease;
+            box-shadow: 0 10px 20px rgba(0,0,0,0.4);
         }
 
-        /* Quand on tombe sur la face spéciale */
+        /* Couleur quand réussite */
         #de.action {
-            background: #C08A3D; /* Bronze du chapeau */
-            color: #000;
-            border-color: #8A611D;
-            box-shadow: 0 10px 30px rgba(192,138,61,0.7);
+            background: #ffdd57;
+            border-color: #ff9900;
+        }
+
+        /* Animation rotation */
+        .rotate {
+            animation: spin 0.6s linear infinite;
+        }
+
+        @keyframes spin {
+            from { transform: rotateY(0); }
+            to   { transform: rotateY(360deg); }
         }
 
         #resultat {
             font-size: 1.8em;
-            margin-top: 25px;
-            min-height: 50px;
-            transition: color 0.3s;
+            margin-top: 20px;
+            min-height: 40px;
         }
 
         #resultat.action {
-            color: #C08A3D;
-            text-shadow: 2px 2px 5px #000;
+            color: #ffdd57;
         }
 
         #resultat.echec {
-            color: #2E2B31;
+            color: #ccc;
         }
 
         button {
-            margin-top: 30px;
+            margin-top: 25px;
             font-size: 1.3em;
             padding: 12px 20px;
             border: none;
-            border-radius: 10px;
+            border-radius: 12px;
+            background: #ff9900;
+            color: white;
             cursor: pointer;
-
-            /* Couleur violet de la cape */
-            background: #4B2E5C;
-            color: #fff;
-
-            transition: background 0.3s;
-            width: 80%;
-            max-width: 250px;
+            transition: 0.3s;
         }
 
         button:hover {
-            background: #6A3E80;
+            background: #ffcc33;
         }
 
-        @media (max-width: 600px) {
-            #de {
-                width: 130px;
-                height: 130px;
-                font-size: 40px;
-                border-width: 4px;
-            }
-
-            button {
-                font-size: 1.1em;
-                padding: 10px 15px;
-            }
-        }
     </style>
 </head>
 <body>
@@ -118,50 +103,71 @@
     <h1>Magic 10-Sided Dice</h1>
     <div id="info">Roll a <strong>5</strong> to draw a hard card!</div>
 
+    <!-- PERSONNAGE -->
+    <div id="perso">🙂</div>
+
     <div id="de">🎲</div>
     <div id="resultat"></div>
+
     <button id="lancer">Roll the dice</button>
 
-    <script>
-        const faces = [1,2,3,4,5,6,7,8,9,10];
-        const actionFace = 5;
-        const de = document.getElementById('de');
-        const resultatDiv = document.getElementById('resultat');
-        const bouton = document.getElementById('lancer');
 
-        function lancerDeSimule() {
-            let compteur = 0;
-            const iterations = 20;
+<script>
+    const faces = [1,2,3,4,5,6,7,8,9,10];
+    const actionFace = 5;
 
-            const interval = setInterval(() => {
-                const chiffreTemp = faces[Math.floor(Math.random() * faces.length)];
-                de.textContent = chiffreTemp;
-                compteur++;
+    const de = document.getElementById('de');
+    const resultatDiv = document.getElementById('resultat');
+    const bouton = document.getElementById('lancer');
+    const perso = document.getElementById('perso');
 
-                if (compteur >= iterations) {
-                    clearInterval(interval);
+    function lancerDeSimule() {
 
-                    const final = faces[Math.floor(Math.random() * faces.length)];
-                    de.textContent = final;
+        perso.textContent = "😐"; // expression neutre pendant le roulage
+        resultatDiv.textContent = "";
 
-                    if (final === actionFace) {
-                        resultatDiv.textContent = "Draw a hard card!";
-                        de.classList.add("action");
-                        resultatDiv.classList.add("action");
-                        resultatDiv.classList.remove("echec");
-                    } else {
-                        resultatDiv.textContent = "Fail";
-                        de.classList.remove("action");
-                        resultatDiv.classList.add("echec");
-                        resultatDiv.classList.remove("action");
-                    }
+        de.classList.add("rotate");
+
+        let compteur = 0;
+        const iterations = 15;
+
+        const interval = setInterval(() => {
+            de.textContent = faces[Math.floor(Math.random() * 10)];
+            compteur++;
+
+            if (compteur >= iterations) {
+                clearInterval(interval);
+
+                const final = faces[Math.floor(Math.random() * 10)];
+
+                de.classList.remove("rotate");
+                de.textContent = final;
+
+                if (final === actionFace) {
+                    // Réussite
+                    resultatDiv.textContent = "Draw a hard card!";
+                    resultatDiv.classList.add("action");
+                    resultatDiv.classList.remove("echec");
+
+                    de.classList.add("action");
+                    perso.textContent = "😎"; // satisfait
+
+                } else {
+                    // Échec
+                    resultatDiv.textContent = "Fail";
+                    resultatDiv.classList.add("echec");
+                    resultatDiv.classList.remove("action");
+
+                    de.classList.remove("action");
+                    perso.textContent = "😭"; // triste
                 }
-            }, 50);
-        }
+            }
+        }, 70);
+    }
 
-        de.addEventListener('click', lancerDeSimule);
-        bouton.addEventListener('click', lancerDeSimule);
-    </script>
+    de.addEventListener('click', lancerDeSimule);
+    bouton.addEventListener('click', lancerDeSimule);
+</script>
 
 </body>
 </html>
