Change character images to '1 1.png'

--- a/de1.html
+++ b/de1.html
@@ -322,7 +322,7 @@
                             soundSuccess.currentTime = 0;
                             soundSuccess.play();
 
-                            perso.src = "image/happy.png";
+                            perso.src = "image/1 1.png";
 
                             resultatDiv.innerHTML = `
                                 <span class="emoji">🎉</span>
@@ -347,7 +347,7 @@
                             soundFail.currentTime = 0;
                             soundFail.play();
 
-                            perso.src = "image/sad.png";
+                            perso.src = "image/1 1.png";
 
                             resultatDiv.innerHTML = `
                                 <span class="emoji">💔</span>
