Update character image source in de1.html

--- a/de1.html
+++ b/de1.html
@@ -212,7 +212,7 @@
     <div id="info">Roll a <strong>5</strong> to draw a hard card!</div>
 
     <!-- PERSONNAGE QUI RESTE LE MÊME AU DÉBUT -->
-    <img id="perso" src="image/1.png" alt="Personnage" />
+    <img id="perso" src="image/1 1.png" alt="Personnage" />
 
     <div id="de">🎲</div>
     <div id="resultat"></div>
