--- a/de1.html
+++ b/de1.html
@@ -168,7 +168,7 @@
 <body>
 
     <h1>Magic 10-Sided Dice</h1>
-    <div id="info">Roll a <strong>5</strong> to draw a hard card!</div>
+    <div id="info">Roll a <strong>5</strong> to have a special effect!</div>
 
     <img id="perso" src="image/1 1.png" alt="Personnage" />
 
@@ -267,7 +267,7 @@
 
                             resultatDiv.innerHTML = `
                                 <span class="emoji">🎉</span>
-                                <span class="text">DRAW A HARD CARD!</span>
+                                <span class="text">DRAW A HARD QUESTION CARD!</span>
                             `;
                             resultatDiv.classList.add("action");
 
